syntax = "proto3";

option csharp_namespace = "Server";

message ServiceStatus {
	bool isSuccessfulOperation = 1;
	string statusMessage = 2;
}
